login-api and middleware added
