# api/docs/swagger.yaml
@@ -1,5 +1,24 @@
 basePath: /v1
 definitions:
+  models.AuthResponse:
+    properties:
+      access_token:
+        type: string
+      created_at:
+        type: string
+      email:
+        type: string
+      first_name:
+        type: string
+      id:
+        type: integer
+      last_name:
+        type: string
+      type:
+        type: string
+      username:
+        type: string
+    type: object
   models.Category:
     properties:
       created_at:
@@ -157,6 +176,18 @@ definitions:
       user_id:
         type: integer
     type: object
+  models.LoginRequest:
+    properties:
+      email:
+        type: string
+      password:
+        maxLength: 16
+        minLength: 6
+        type: string
+    required:
+    - email
+    - password
+    type: object
   models.OKResponse:
     properties:
       message:
@@ -219,25 +250,6 @@ definitions:
     - password
     - username
     type: object
-  models.RegisterResponse:
-    properties:
-      access_token:
-        type: string
-      created_at:
-        type: string
-      email:
-        type: string
-      first_name:
-        type: string
-      id:
-        type: integer
-      last_name:
-        type: string
-      type:
-        type: string
-      username:
-        type: string
-    type: object
   models.User:
     properties:
       created_at:
@@ -268,6 +280,32 @@ info:
   title: Swagger for blog api
   version: "1.0"
 paths:
+  /auth/login:
+    post:
+      consumes:
+      - application/json
+      description: Login user
+      parameters:
+      - description: Data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/models.LoginRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.AuthResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Login user
+      tags:
+      - auth
   /auth/register:
     post:
       consumes:
@@ -286,7 +324,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/models.RegisterResponse'
+            $ref: '#/definitions/models.AuthResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -349,6 +387,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Create a category
       tags:
       - category
@@ -587,6 +627,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: File upload
       tags:
       - file-upload
@@ -709,6 +751,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Create a post
       tags:
       - post
@@ -846,6 +890,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Create a user
       tags:
       - user
@@ -895,6 +941,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Get a user by id
       tags:
       - user
@@ -928,4 +976,9 @@ paths:
       summary: Update a user
       tags:
       - user
+securityDefinitions:
+  ApiKeyAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
